--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
+:root {
+    --main-bg-color: #FB3640, #944BBB, #4392F1;
+}
+
 body {
-    background-image: linear-gradient(-45deg, #3a3a3a9d, #ffffff);
+    background-image: linear-gradient(-45deg, var(--main-bg-color));
     height: 100vh;
     overflow-y: hidden;
 }
@@ -15,17 +19,16 @@ main form{
     display: flex;
     flex-direction: column;
     padding: 5px 30px 30px 30px;
-    background-color: #bebebebd;
-    border: solid .5px #707070ad;
+    background-color: #ffffff7c;
     border-radius: 10px;
-    box-shadow: 2px 2px 2px rgba(109, 109, 109, 0.637);
+    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.288);
 }
 
 main form label{
     text-transform: capitalize;
-    margin-top: 25px;
+    margin-top: 30px;
     margin-left: 1px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 main form label::after {
@@ -34,11 +37,24 @@ main form label::after {
 }
 
 main form input {
-    border: solid 1px rgb(116, 116, 116);
-    border-radius: 5px;
+    border: none;
+    background-color: transparent;
     height: 25px;
     padding: 5px;
     letter-spacing: 1px;
+    border-bottom: solid 2px #ffffff8c;
+}
+
+main form input:focus {
+    outline: none;
+    border: none;
+}
+
+main form .input_underline {
+    background-color: #ffffff8c;
+    height: 2px;
+    width: 0;
+    border-radius: 5px;
 }
 
 main form button{
@@ -60,4 +76,10 @@ main form button:hover {
 
 main form button:active {
     box-shadow: 2px 2px 2px rgba(109, 109, 109, 0.637) inset;
+}
+
+main form .actived {
+    background-image: linear-gradient(-45deg, var(--main-bg-color));
+    width: 100%;
+    transition: .3s ease-in-out;
 }
