--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ main form input {
     height: 25px;
     padding: 5px;
     letter-spacing: 1px;
+    transition: .3s ease-in-out;
     border-bottom: solid 2px #ffffff8c;
 }
 
@@ -51,9 +52,10 @@ main form input:focus {
 }
 
 main form .input_underline {
-    background-color: #ffffff8c;
+    background-image: linear-gradient(-45deg, var(--main-bg-color));
     height: 2px;
     width: 0;
+    transition: .3s ease-in-out;
     border-radius: 5px;
 }
 
@@ -74,12 +76,6 @@ main form button:hover {
     background-color: #e6e6e6;
 }
 
-main form button:active {
-    box-shadow: 2px 2px 2px rgba(109, 109, 109, 0.637) inset;
-}
-
-main form .actived {
-    background-image: linear-gradient(-45deg, var(--main-bg-color));
+main form input:focus + .input_underline {
     width: 100%;
-    transition: .3s ease-in-out;
 }
