--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,20 +60,23 @@ main form .input_underline {
 }
 
 main form button{
-    background-color: #ffffff;
+    /* background-color: #ffffff5d; */
+    background-image: linear-gradient(-45deg, var(--main-bg-color));
+    filter: opacity(.2);
+    color: #fff;
     font-size: 25px;
     margin: auto;
-    margin-top: 30px;
-    width: fit-content;
+    margin-top: 40px;
+    width: 80%;
     padding: 8px;
-    border: solid 1px #00000075;
     border-radius: 10px;
-    box-shadow: 2px 2px 2px rgba(109, 109, 109, 0.637);
-}   
+    border: none;
+    cursor: not-allowed;
+}
 
-main form button:hover {
+main form button.ready {
+    filter: opacity(1);
     cursor: pointer;
-    background-color: #e6e6e6;
 }
 
 main form input:focus + .input_underline {
