--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --main-bg-color: #FB3640, #944BBB, #4392F1;
+    --created-bg-color: #56EEF4, #E5D1D0, #32E875;
 }
 
 body {
@@ -60,9 +61,7 @@ main form .input_underline {
 }
 
 main form button{
-    /* background-color: #ffffff5d; */
     background-image: linear-gradient(-45deg, var(--main-bg-color));
-    filter: opacity(.2);
     color: #fff;
     font-size: 25px;
     margin: auto;
@@ -71,6 +70,16 @@ main form button{
     padding: 8px;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
+    transition: .5 ease-in-out;
+}
+
+main form button:hover {
+    scale: 1.05;
+}
+
+main form button:disabled {
+    filter: opacity(.2);
     cursor: not-allowed;
 }
 
@@ -83,12 +92,12 @@ main form .recovery_password {
 }
 
 main form .recovery_password:hover {
-    text-shadow: 0px 0px 3px #fff;
+    text-shadow: 0px 0px 3px;
 }
 
-main form button.ready {
-    filter: opacity(1);
-    cursor: pointer;
+main form button.account_created {
+    content: "Account Created";
+    background-image: linear-gradient(-45deg, var(--created-bg-color));
 }
 
 main form input:focus + .input_underline {
