--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,3 +103,21 @@ main form button.account_created {
 main form input:focus + .input_underline {
     width: 100%;
 }
+
+
+/* ----------- ERROR MENSAGES ---------------- */
+
+main form .error_mensages {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    margin-top: 5px;
+    font-size: 14px;
+    color: #FB3640;
+}
+main form .error_mensages span::before {
+    content: '* ';
+}
+main form .error_mensages span {
+    display: none;
+}
