--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,8 @@ main form .material-symbols-outlined {
     margin-top: -30px;
     margin-left: 90%;
     width: fit-content;
+    cursor: pointer;
+    user-select: none;
 }
 
 main form .input_underline {
